src/tests/testfiles/function-declarations/9.txt
Error at 5:1: Function declaration parameters don't match previous definition
int sum(int a);
^
